--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@
 /__*
 src/*/__*
 /d/GitHub/Inteligencia_Artificial_repositorios_varios/virufy/IATos/saved_model/variables/*.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
+*.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
+*.pb filter=lfs diff=lfs merge=lfs -text
+*.index filter=lfs diff=lfs merge=lfs -text
