--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,13 @@
 # set FLASK_APP=app.py
 # flask run
 
-Flask
-tensorflow==2.4.1
-statistics
-pydub
-tqdm
-librosa
-gunicorn # Librería para Heroku
-dnspython
-flask_mongoengine
+#Flask
+#tensorflow==2.4.1
+#statistics
+#pydub
+#tqdm
+#librosa
+#gunicorn # Librería para Heroku
+#dnspython
+#flask_mongoengine
 
