--- a/Dockerfile.heroku
+++ b/Dockerfile.heroku
@@ -5,7 +5,7 @@ FROM tensorflow/serving
 ENV MODEL_BASE_PATH /src/saved_model
 ENV MODEL_NAME saved_model
 
-COPY models/saved_model /models/saved_model
+COPY /src/saved_model /models/saved_model
 
 # Fix because base tf_serving_entrypoint.sh does not take $PORT env variable while $PORT is set by Heroku
 # CMD is required to run on Heroku
