--- a/Dockerfile.heroku
+++ b/Dockerfile.heroku
@@ -2,14 +2,13 @@
 
 FROM tensorflow/serving
 
+RUN apt-get update && apt-get install -y git && git reset --hard
+
 ENV MODEL_BASE_PATH /src/saved_model
 ENV MODEL_NAME saved_model
 
 COPY /src/saved_model /models/saved_model
 
-# Fix because base tf_serving_entrypoint.sh does not take $PORT env variable while $PORT is set by Heroku
-# CMD is required to run on Heroku
-COPY tf_serving_entrypoint.sh /usr/bin/tf_serving_entrypoint.sh
-RUN chmod +x /usr/bin/tf_serving_entrypoint.sh
-ENTRYPOINT []
+RUN echo '#!/bin/bash tensorflow_model_server --rest_api_port=$PORT --model_name=${MODEL_NAME} --model_base_path=${MODEL_BASE_PATH}/${MODEL_NAME} "$@"' > /usr/bin/tf_serving_entrypoint.sh && chmod +x /usr/bin/tf_serving_entrypoint.sh
+
 CMD ["/usr/bin/tf_serving_entrypoint.sh"]
