--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,5 @@
-absl-py==0.12.0
-appdirs==1.4.4
-astunparse==1.6.3
-audioread==2.1.9
-cachetools==4.2.1
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-click==7.1.2
-decorator==5.0.5
-dnspython==2.1.0
-docutils==0.17
-email-validator==1.1.2
-Flask==1.1.2
-flask-mongoengine==1.0.0
-Flask-WTF==0.14.3
-flatbuffers==1.12
-gast==0.3.3
-google-auth==1.28.0
-google-auth-oauthlib==0.4.4
-google-pasta==0.2.0
-grpcio==1.32.0
-h5py==2.10.0
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.3
-joblib==1.0.1
-Keras-Preprocessing==1.1.2
-librosa==0.8.0
-llvmlite==0.36.0
-Markdown==3.3.4
-MarkupSafe==1.1.1
-mongoengine==0.23.0
-numba==0.53.1
-numpy==1.19.5
-oauthlib==3.1.0
-opt-einsum==3.3.0
-packaging==20.9
-pooch==1.3.0
-protobuf==3.15.7
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pydub==0.25.1
-pymongo==3.11.3
-pyparsing==2.4.7
-requests==2.25.1
-requests-oauthlib==1.3.0
-resampy==0.2.2
-rsa==4.7.2
-scikit-learn==0.24.1
-scipy==1.6.2
-six==1.15.0
-SoundFile==0.10.3.post1
-statistics==1.0.3.5
-tensorboard==2.4.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.4.1
-tensorflow-estimator==2.4.0
-termcolor==1.1.0
-threadpoolctl==2.1.0
-tqdm==4.59.0
-typing-extensions==3.7.4.3
-urllib3==1.26.4
-Werkzeug==1.0.1
-wrapt==1.12.1
-WTForms==2.3.3
+Flask
+Flask-Cors
+gunicorn # Librería para Heroku
+dnspython
+flask_mongoengine
